# tuya-iotos-embedded-sweeper-demo

./: README.md  README_cn.md
IoT_sdk/: CMakeLists.txt  README.md  build_app.sh  freq_count_2.c  gpio.sh  rc.local
IoT_sdk/files/gyro1/: dev_smart_1.txt
IoT_sdk/src/common/: config.h  define.c  define.h
IoT_sdk/src/gyro_mcu/: gyro_mcu.c  gyro_mcu.h
IoT_sdk/src/gyro_wifi_dev/: main.c  switch_gyro.c  tuya_iot_protocol.c  tuya_iot_protocol.h  tuya_iot_soc_dev_entry.c  tuya_iot_wifi_net.bak  tuya_iot_wifi_net.c
IoT_sdk/src/sdk/include/: aes_inf.h  tuya_cloud_com_defs.h  tuya_cloud_error_code.h  tuya_cloud_types.h  tuya_cloud_wifi_defs.h  tuya_iot_com_api.h  tuya_iot_config.h  tuya_iot_wifi_api.h  uni_log.h  uni_network.h  uni_thread.h
IoT_sdk/src/sdk/include/hal/driver/: tuya_hal_bt.h  tuya_hal_wifi.h  tuya_hal_wired.h
IoT_sdk/src/sdk/include/hal/system/: tuya_hal_network.h  tuya_hal_system.h
IoT_sdk/src/sdk/lib_arm/: libtuya_iot.a.stripped
IoT_sdk/src/sdk/lib_pc/: libtuya_iot.a.stripped
IoT_sdk/src/sys_api/: sys_process.c  sys_process.h
IoT_sdk/tydb/: gyro1_log_seq_stat  gyro1_tuya_user.db  gyro1_tuya_user.db_bak
mcu_sdk/: tuya_gyro_map.c
mcu_sdk/doc/: 03-DP定义及交互_2019_12_2.xlsx
